modified 20200226 added infomation show

--- a/app/src/main/res/layout/item_error_list.xml
+++ b/app/src/main/res/layout/item_error_list.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="60dp"
+    android:layout_height="42dp"
     android:orientation="horizontal"
     android:background="@color/colorBackground"
     android:gravity="center_vertical">
@@ -12,20 +12,20 @@
         android:id="@+id/error_grid_code"
         android:layout_marginLeft="20dp"
         android:gravity="left"
-        android:textSize="18dp"
+        android:textSize="20dp"
         android:text="01"
         android:textColor="@color/colorString"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="end">
+        android:gravity="start">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="20dp"
+            android:layout_marginStart="20dp"
             android:id="@+id/error_grid_discrip"
-            android:layout_marginRight="10dp"
-            android:textSize="18dp"
+            android:textSize="20dp"
             android:text="系统恢复出厂设置"
             android:textColor="@color/colorString"/>
     </LinearLayout>
