--- a/app/src/main/res/layout/layout_info_autodoor.xml
+++ b/app/src/main/res/layout/layout_info_autodoor.xml
@@ -15,11 +15,15 @@
         />
 
 
-
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/colorString"
+        />
     <!--    最近10次报警代码-->
     <Button
         android:layout_width="match_parent"
-        android:layout_height="80dp"
+        android:layout_height="60dp"
         android:paddingLeft="10dp"
         android:paddingRight="20dp"
         android:background="@color/colorBackground"
@@ -28,9 +32,20 @@
         android:text="最近10次报警代码"
         android:textSize="22dp"
         android:textColor="@color/colorString"/>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:background="@color/colorString"
+        />
         <lafaya.revolvingdoor.utils.AutoCountListView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:divider="#C9C9C9"
+            android:dividerHeight="1dp"
             android:id="@+id/grid_info_TenErrorCode"
             android:scrollbars="none"
             android:verticalSpacing="2dp"
@@ -40,7 +55,7 @@
     <!--    最近10次系统复位原因-->
     <Button
         android:layout_width="match_parent"
-        android:layout_height="80dp"
+        android:layout_height="60dp"
         android:paddingLeft="10dp"
         android:paddingRight="20dp"
         android:background="@color/colorBackground"
@@ -49,19 +64,30 @@
         android:text="最近10次系统复位原因"
         android:textSize="22dp"
         android:textColor="@color/colorString"/>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:background="@color/colorString"
+        />
     <lafaya.revolvingdoor.utils.AutoCountListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:divider="#C9C9C9"
+        android:dividerHeight="1dp"
         android:id="@+id/grid_info_TenResetCode"
         android:scrollbars="none"
-        android:verticalSpacing="2dp"
+        android:verticalSpacing="1dp"
         android:background="@color/ic_launcher_background"
         />
 
     <!--    严重错误信息-->
     <Button
         android:layout_width="match_parent"
-        android:layout_height="80dp"
+        android:layout_height="60dp"
         android:paddingLeft="10dp"
         android:paddingRight="20dp"
         android:background="@color/colorBackground"
@@ -70,9 +96,20 @@
         android:text="严重错误信息"
         android:textSize="22dp"
         android:textColor="@color/colorString"/>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:background="@color/colorString"
+        />
     <lafaya.revolvingdoor.utils.AutoCountListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:divider="#C9C9C9"
+        android:dividerHeight="1dp"
         android:id="@+id/grid_info_BadErrorCode"
         android:scrollbars="none"
         android:verticalSpacing="2dp"
