--- a/app/src/main/res/layout/layout_parameter_wingl.xml
+++ b/app/src/main/res/layout/layout_parameter_wingl.xml
@@ -5,8 +5,8 @@
     android:layout_height="match_parent"
     android:id="@+id/layout_parameter_wingl">
 
-    <GridView
-        android:layout_width="wrap_content"
+    <lafaya.revolvingdoor.utils.AutoCountListView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/grid_parWingL"
         android:scrollbars="none"
