--- a/app/src/main/res/layout/layout_runningmonitor.xml
+++ b/app/src/main/res/layout/layout_runningmonitor.xml
@@ -17,7 +17,19 @@
         android:paddingRight="5dp"
         android:scrollbars="vertical">
 
-        <lafaya.revolvingdoor.utils.AutoCountListView
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:textSize="24dp"
+            android:textColor="@color/colorString"
+            android:text="实时监控"
+            android:gravity="center"/>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/colorString"/>
+
+        <lafaya.revolvingdoor.utils.AutoCountGridView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/grid_runningmonitor_msg"
@@ -61,7 +73,7 @@
         <Button
             android:layout_width="match_parent"
             android:layout_height="60dp"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="10dp"
             android:id="@+id/button_runningmonitor_return"
             android:gravity="center"
             android:textSize="24dp"
