--- a/app/src/main/res/layout/layout_runningmonitor.xml
+++ b/app/src/main/res/layout/layout_runningmonitor.xml
@@ -8,6 +8,11 @@
         <!--    运行状态监控-->
         <!--    自动门状态：-->
         <!--    运行次数、速度、位置、温度、接口、等-->
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -81,5 +86,7 @@
             android:textColor="@color/colorBackground"
             android:background="@color/colorPrimary"/>
     </LinearLayout>
+    </ScrollView>
+
 </RelativeLayout>
 
